feat: hateoas e idempotency key en reservas implementado
