# reservas/app/schema.py
@@ -1,4 +1,4 @@
-from pydantic import BaseModel, ConfigDict
+from pydantic import BaseModel, ConfigDict, computed_field
 from datetime import date
 from app.models import EstadoReserva
 
@@ -23,8 +23,37 @@ class ReservaBase(BaseModel):
 class ReservaCreate(ReservaBase):
     pass
 
+#computed_field pues _link no necesita ser guardado en la bd
 class ReservaResponse(ReservaBase):
     id: int
     estado: EstadoReserva
     habitacion_id: int | None = None
+
     model_config = ConfigDict(from_attributes=True)
+
+    @computed_field(alias="_links", repr=False)
+    @property
+    def links(self) -> dict[str, dict[str, str]]:
+        """Enlaces de acciones disponibles según el estado de la reserva."""
+        base = f"/v1/reservas/{self.id}"
+
+        links = {
+            "self": {
+                "href": base,
+                "method": "GET"
+            }
+        }
+
+        if self.estado == EstadoReserva.CONFIRMADA:
+            links["cancelar"] = {
+                "href": base,
+                "method": "DELETE"
+            }
+
+        elif self.estado == EstadoReserva.REPARACION:
+            links["resolver"] = {
+                "href": f"{base}/resolver",
+                "method": "POST"
+            }
+
+        return links
